blueprints/listmonk-statics/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listmonk-statics
spec:
  replicas: 1
  template:
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: listmonk-statics
          image: joseluisq/static-web-server
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 1
            periodSeconds: 10
          name: listmonk-statics
          ports:
            - containerPort: 8000
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 1
            periodSeconds: 10
          resources: {}
            # limits:
              # cpu: 100m
              # memory: 64Mi
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /var/public
              name: public-volume
              readOnly: true
            - mountPath: /etc/config.toml
              name: config-volume
              readOnly: true
              subPath: config.toml
          workingDir: /var/public
      volumes:
        - emptyDir: {}
          name: public-volume
        - configMap:
            name: listmonk-statics-config
          name: config-volume
