blueprints/listmonk-statics/ciliumnetworkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: listmonk-statics
spec:
  endpointSelector:
    matchLabels:
      app: service
  ingress:
    - toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
          rules:
            http: []
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
          rules:
            http: []
